--- a/src/KAutoHelper.csproj
+++ b/src/KAutoHelper.csproj
@@ -14,4 +14,8 @@
 		<PackageReference Include="Emgu.CV.runtime.windows" Version="4.8.1.5350" />
 		<PackageReference Include="System.Drawing.Common" Version="8.0.3" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\FacebookLDAuto\FacebookLDAuto.csproj" />
+	</ItemGroup>
 </Project>
